<resources>
    <string name="app_name"> Auto Door</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_old_password">Old Password</string>
    <string name="prompt_new_password">New Password</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_phone_number">Phone Number</string>
    <string name="prompt_retype_password">Re-Type New Password</string>
    <string name="login_button">LOGIN</string>
    <string name="change_password_button">Save Changes</string>
    <string name="reset_button">Reset</string>
    <string name="action_change_pin"> Change Pin</string>
    <string name="action_change_password"> Change Password</string>


    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Manage Door</item>
        <item> Change Password</item>
        <item>Login with different user</item>
        <item> Help</item>
        <item> About</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_manage_door</item>
        <item>@drawable/ic_change_password</item>
        <item>@drawable/ic_different_user</item>
        <item>@drawable/ic_help</item>
        <item>@drawable/ic_about</item>
    </array>

    <string name="title_manage_door">Manage Door</string>
    <string name="title_change_password">Change Password</string>
    <string name="title_logout">Login with different user </string>
    <string name="title_about">About</string>
    <string name="title_help">Help </string>
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_manage_door"> Manage Door</string>
    <string name="title_activity_forgotpin">Reset Pin</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="title_activity_request_access">Request Access</string>
    <string name="title_activity_changepin">Change Pin</string>
    <string name="button_change">Change</string>
    <string name="request_button">REQUEST ACCESS</string>
    <string name="request_access_button">Submit</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="lock">Lock</string>
    <string name="unlock">Unlock</string>
    <string name="current_pin_hint">Current Pin</string>
    <string name="new_pin_hint">New Pin</string>
    <string name="content_authority">com.techx.autodoor</string>
    <string name="version_text">Version 1.0</string>
    <string name="copyright_text">"\u00a9" 2015-2016 Autodoor</string>
    <string name="all_right_text">All rights reserved</string>
    <string name="terms_conditions">Terms and Conditions</string>
    <string name="terms_conditions_text">This application is intended for use in instutitions whether public or private.</string>
    <string name="contact_us">Contact Us</string>
    <string name="question_help">Questions? Need Help?</string>
    <string name="role_option">Select Role</string>
    <string name="office_option">Select Office</string>
    <string name="logout_button">Logout</string>
    <string name="forgot_text">Enter your email in the field below and then check your email to recover your password.</string>
</resources>