<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".HelpFragment"
    android:background="@color/backgroundColor"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">


    <TextView
        android:id="@+id/terms_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_conditions"
        android:textSize="@dimen/text_header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        />
    <View
        android:layout_marginTop="@dimen/text_view_margin"
        android:layout_width="200dp"
        android:layout_height="2dp"
        android:background="#c0c0c0"/>
    <TextView
        android:id="@+id/version_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_conditions_text"
        android:textSize="@dimen/text_normal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/text_view_margin"
        android:gravity="center"
        />

    <TextView
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_us"
        android:textSize="@dimen/text_header"
        android:layout_centerHorizontal="true"


        />

    <TextView
        android:layout_marginTop="@dimen/text_view_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_help"
        android:textSize="@dimen/text_normal"
        android:layout_centerHorizontal="true"


        />

</LinearLayout>