<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".ChangePasswordFragment"
    android:background="@color/backgroundColor"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="150dp">
    <ImageView
        android:id="@+id/change_password_logo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:src="@drawable/autodoor_logo"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_change_password"
        android:textSize="@dimen/text_header"
        android:layout_below="@id/change_password_logo"
        />
</RelativeLayout>
    <LinearLayout  android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="vertical"
       >
        <EditText android:id="@+id/old_password" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:hint="@string/prompt_old_password"
            android:inputType="textPassword" android:maxLines="1"
            android:singleLine="true"
            android:layout_marginBottom="@dimen/text_view_margin"
            android:textColorHint="@color/colorText"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_normal"/>

        <EditText android:id="@+id/new_password" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:hint="@string/prompt_new_password"
            android:inputType="textPassword" android:maxLines="1"
            android:singleLine="true"
            android:layout_marginBottom="@dimen/text_view_margin"
            android:textColorHint="@color/colorText"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_normal"/>

        <EditText android:id="@+id/retype_password" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:hint="@string/prompt_retype_password"
            android:inputType="textPassword"
            android:maxLines="1" android:singleLine="true"
            android:textColorHint="@color/colorText"
            android:textColor="@color/colorText"
            android:layout_marginBottom="@dimen/text_view_margin"
            android:textSize="@dimen/text_normal"/>

        <Button android:id="@+id/change_password_button" style="?android:textAppearanceSmall"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_view_margin" android:text="@string/change_password_button"
            android:textStyle="bold"
            android:textColor="@color/textColorPrimary"
            android:background="@color/colorButton"
            />
    </LinearLayout>


</LinearLayout>