<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".HelpFragment"
    android:background="@color/backgroundColor"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">


        <TextView
            android:id="@+id/app_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/text_header"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            />
        <TextView
            android:id="@+id/version_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version_text"
            android:textSize="@dimen/text_normal"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/app_name_text"

            />
        <ImageView
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:id="@+id/change_password_logo"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:src="@drawable/ic_icon"
            android:layout_below="@id/version_text"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright_text"
            android:textSize="@dimen/text_normal"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/app_name_text"

            />

    <TextView
        android:layout_marginTop="@dimen/text_view_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_right_text"
        android:textSize="@dimen/text_normal"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/app_name_text"

        />

</LinearLayout>