<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".ForgotPassword"
    android:background="@color/backgroundColor"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/forgot_logo"
            android:layout_width="200dp"
            android:layout_height="120dp"
            android:src="@drawable/autodoor_logo"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_forgot_password"
            android:textSize="@dimen/text_header"

            />

        <TextView
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_text"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="vertical">

        <EditText android:id="@+id/forgot_email" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:hint="@string/prompt_email"
            android:inputType="text" android:maxLines="1"
            android:singleLine="true"
            android:layout_marginBottom="@dimen/text_view_margin"
            android:textColorHint="@color/colorText"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_normal"/>

        <Button android:id="@+id/forgot_password_button" style="?android:textAppearanceSmall"
            android:layout_width="match_parent" android:layout_height="match_parent"
            android:layout_marginTop="@dimen/activity_vertical_margin" android:text="@string/reset_button"
            android:textStyle="bold"
            android:textColor="@color/textColorPrimary"
            android:background="@color/colorButton"
            />



    </LinearLayout>

</LinearLayout>