<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.techx.autodoor.ChangePinActivity"
    android:background="@color/colorPrimary"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
        android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar" />
        </LinearLayout>

    </android.support.design.widget.AppBarLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText android:id="@+id/current_pin" android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:hint="@string/current_pin_hint"
                        android:inputType="numberPassword" android:maxLines="1"
                        android:singleLine="true"
                        android:layout_marginBottom="10dp"
                        android:textColorHint="@color/textColorPrimary"
                        android:textColor="@color/textColorPrimary" />

                    <EditText android:id="@+id/new_pin" android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:hint="@string/new_pin_hint"
                        android:inputType="numberPassword" android:maxLines="1"
                        android:singleLine="true"
                        android:layout_marginBottom="10dp"
                        android:textColorHint="@color/textColorPrimary"
                        android:textColor="@color/textColorPrimary" />

                    <Button android:id="@+id/button_change" style="?android:textAppearanceSmall"
                        android:layout_width="match_parent" android:layout_height="wrap_content"
                        android:layout_marginTop="16dp" android:text="@string/button_change"
                        android:textStyle="bold"
                        android:textColor="@color/textColorPrimary"
                        android:background="@color/buttonColor" />

                </LinearLayout>
            </LinearLayout>
    </LinearLayout>


</LinearLayout>
